# TestTask_Skyeng

./: Dockerfile  README.md  config.py  database.db  docker-compose-ci.yaml  docker-compose.yaml  docker_ci_config.py  docker_config.py  implemented.py  loader.py  pyproject.toml  req.txt  requirements.txt  run.py  setup_db.py  utils.py
dao/: users_dao.py
dao/models/: users.py
handlers/: __init__.py  choose_theme.py  instructions_callback.py  markups.py  states.py  training.py
handlers/commands/: start.py
handlers/templates/: choosing.html  instructions.html  start.html  task_text.html
handlers/templates/faq/: criteria.html  show_task.html
services/: user.py
